--- a/djangodemo/jsConfirm/static_source/scss/jsConfirm/_core.scss
+++ b/djangodemo/jsConfirm/static_source/scss/jsConfirm/_core.scss
@@ -36,7 +36,7 @@ SOFTWARE.
 }
 
 #jsConfirmBackground {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
@@ -55,7 +55,7 @@ SOFTWARE.
 
 #jsConfirm {
     font-family: "Proxima Nova", Helvetica, sans-serif;  
-    position: absolute;	
+    position: fixed;	
     width: 90%;
     top: -30rem;
     background: $jsConfirm-white;
