--- a/djangodemo/jsConfirm/static_source/scss/web/_index.scss
+++ b/djangodemo/jsConfirm/static_source/scss/web/_index.scss
@@ -41,6 +41,12 @@
         padding: 1rem;
         @include border-radius(3rem);
 
+
+		&:after { // fox for ie9
+		    display: none;
+		}
+
+
         &:hover {
     	    background-color: rgba(0,0,0,0.7);        
         }
