--- a/djangodemo/home/templates/home/gallery.html
+++ b/djangodemo/home/templates/home/gallery.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %}jsConfirm | Welcome{% endblock %}
+{% block title %}jsConfirm | Gallery{% endblock %}
 {% block body_id %}gallery{% endblock %}
 
 {% block content %}
